--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./style/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="icon" href="./img/src/log_2.jpg">
     <title>Catalogo | De Mendoza a tu mesa </title>
 </head>
 <body>
@@ -13,6 +14,11 @@
         <div class="logo-container">
             <img src="./img/src/log_1.jpg">
         </div>
+        <ul>
+            <li><a href="https://wwwinstagram.com/demendozaatumesa/" class="social-link"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=100086812960744" class="social-link"><i class="fa-brands fafacebook"></i></a></li>
+            <li><a href="https://api.whatsapp.com/send?phone=5492342465395" class="social-link"><i class="fa-brands fa-whatsapp"></i></a></li>
+        </ul>
         <ul class="elemento-desplegable">
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -29,7 +35,7 @@
                     <li><a class="dropdown-item" href="#regionalesespeciales">Regionales Especiales</a></li>
                     <li><a class="dropdown-item" href="#mermeladasalsol">Mermeladas</a></li>
                     <li><a class="dropdown-item" href="#regionalessalados">Regionales Salados</a></li>
-                    <li><a class="dropdown-item" href="#delicatesen">Delicatessen</a></li>
+                    <li><a class="dropdown-item" href="#delicatessen">Delicatessen</a></li>
                     <li><a class="dropdown-item" href="#aceites">Aceites</a></li>
                 </ul>
             </li>
@@ -42,5 +48,6 @@
     <script type="text/javascript" src="./scripts/index.js"></script>
     <script type="text/javascrpt" src="./scripts/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/fd697d25c0.js"></script>
 </body>
 </html>
