--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./style/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="icon" href="catalogo-productos/img/src/log_2.jpg">
+    <link rel="icon" src="./img/src/log_2.jpg">
     <title>Catalogo | De Mendoza a tu mesa </title>
 </head>
 <body>
@@ -14,7 +14,7 @@
         <div class="logo-container">
             <img src="./img/src/log_1.jpg">
         </div>
-        <ul>
+        <ul class="social">
             <li><a href="https://wwwinstagram.com/demendozaatumesa/" class="social-link"><i class="fa-brands fa-instagram"></i></a></li>
             <li><a href="https://www.facebook.com/profile.php?id=100086812960744" class="social-link"><i class="fa-brands fafacebook"></i></a></li>
             <li><a href="https://api.whatsapp.com/send?phone=5492342465395" class="social-link"><i class="fa-brands fa-whatsapp"></i></a></li>
