--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <ul class="social">
             <li><a href="https://wwwinstagram.com/demendozaatumesa/" class="social-link"><i class="fa-brands fa-instagram"></i></a></li>
-            <li><a href="https://www.facebook.com/profile.php?id=100086812960744" class="social-link"><i class="fa-brands fafacebook"></i></a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=100086812960744" class="social-link"><i class="fa-brands fa-facebook"></i></a></li>
             <li><a href="https://api.whatsapp.com/send?phone=5492342465395" class="social-link"><i class="fa-brands fa-whatsapp"></i></a></li>
         </ul>
         <ul class="elemento-desplegable">
