--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
 </head>
 <body>
     <div class="nav-bar inverse">
-        <div class="logo-container">
-            <img src="./img/src/log_1.jpg">
+        <div class="medium-cont">
+            <ul class="social">
+                <li><a href="https://wwwinstagram.com/demendozaatumesa/" class="social-link"><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a href="https://www.facebook.com/profile.php?id=100086812960744" class="social-link"><i class="fa-brands fa-facebook"></i></a></li>
+                <li><a href="https://api.whatsapp.com/send?phone=5492342465395" class="social-link"><i class="fa-brands fa-whatsapp"></i></a></li>
+            </ul>
+            <button class="button-52" role="button"><a href="./promos.html" class="regalo-link">Regalos/Promos</a></button>
         </div>
-        <ul class="social">
-            <li><a href="https://wwwinstagram.com/demendozaatumesa/" class="social-link"><i class="fa-brands fa-instagram"></i></a></li>
-            <li><a href="https://www.facebook.com/profile.php?id=100086812960744" class="social-link"><i class="fa-brands fa-facebook"></i></a></li>
-            <li><a href="https://api.whatsapp.com/send?phone=5492342465395" class="social-link"><i class="fa-brands fa-whatsapp"></i></a></li>
-        </ul>
+        
+    
         <ul class="elemento-desplegable">
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
