--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="https://www.facebook.com/profile.php?id=100086812960744" class="social-link"><i class="fa-brands fa-facebook"></i></a></li>
                 <li><a href="https://api.whatsapp.com/send?phone=5492342465395" class="social-link"><i class="fa-brands fa-whatsapp"></i></a></li>
             </ul>
-            <button class="button-52" role="button"><a href="./promos.html" class="regalo-link">Regalos/Promos</a></button>
+            <!-- <button class="button-52" role="button"><a href="./promos.html" class="regalo-link">Regalos/Promos</a></button> -->
         </div>
         
     
@@ -38,7 +38,7 @@
                     <li><a class="dropdown-item" href="#mermeladasalsol">Mermeladas</a></li>
                     <li><a class="dropdown-item" href="#regionalessalados">Regionales Salados</a></li>
                     <li><a class="dropdown-item" href="#delicatessen">Delicatessen</a></li>
-                    <li><a class="dropdown-item" href="#aceites">Aceites</a></li>
+                    <li><a class="dropdown-item" href="#condimetnosespeciales">Condimentos Especiales</a></li>
                 </ul>
             </li>
         </ul>
